# BigNumLib

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  exemplo-doxygen
doc/html/: README_8md.html  bignumQA_8c-example.html  bignumQA_8c.html  bignumQA_8c_a6288eba0f8e8ad3ab1544ad731eb7667.html  bignumQA_8c_source.html  bignum_8c.html  bignum_8c_source.html  bignum_8h.html  bignum_8h__dep__incl.dot  bignum_8h_a0d2d2ad08be5ca2f623ae54c1590aac5.html  bignum_8h_a0d2d2ad08be5ca2f623ae54c1590aac5_a0d2d2ad08be5ca2f623ae54c1590aac5_icgraph.dot  bignum_8h_source.html  dir_000001_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  drawingCirclePage.html  drawingRectanglePage.html  examples.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  md_README.html  menudata.js  pages.html
doc/html/search/: all_0.js  all_3.js  files_0.js  functions_0.js  pages_1.js  searchdata.js
doc/latex/: bignumQA_8c-example.tex  bignumQA_8c.tex  bignumQA_8c.tex.tmp  bignumQA_8c__incl.dot  bignumQA_8c_a6288eba0f8e8ad3ab1544ad731eb7667_a6288eba0f8e8ad3ab1544ad731eb7667_cgraph.dot  bignumQA_8c_source.tex  bignum_8c.tex  bignum_8c.tex.tmp  bignum_8c__incl.dot  bignum_8c_source.tex  bignum_8h.tex  bignum_8h_source.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.tex  examples.tex  files.tex  index.tex  md_README.tex  refman.tex
ide/vscode/: bigNum.code-workspace
include/: bignum.h  bignumerr.h  bignummath.h
results/Linux/: performanceMath.result
results/Windows/: performanceMath.result
src/: bignum.c  bignummath.c
src/include/: commonbignum.h  internalbignum.h  version.h
src/platform/windows/x64/: add.asm
test/: bignumQA.c  compopenssl.c  testbase.c  testmath.c  testmathperformance.c
test/include/: compopenssl.h  testbase.h  testmath.h  testmathperformance.h
